apps/storefront/overlays/canary/blue-green-strategy-patch.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: storefront
spec:
  strategy:
    canary: null
    blueGreen:
      activeService: storefront
      previewService: storefront-preview
      autoPromotionEnabled: false
