apps/storefront/overlays/canary/preview-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: storefront-preview
spec:
  selector:
    app.kubernetes.io/name: storefront
  ports:
    - name: http
      port: 80
      targetPort: http
